GNOME Bugzilla – Bug 726372
tmdb: Fix possible assertion at run-time
Last modified: 2014-03-17 07:51:26 UTC
.
Created attachment 271946 [details] [review] tmdb: Fix possible assertion at run-time When making a single request, we would very likely assert making the request because the address of the list pointer wasn't a valid GrlTmdbRequestDetail value.
Attachment 271946 [details] pushed as 22adabb - tmdb: Fix possible assertion at run-time