tmdb: Fix possible assertion at run-time

When making a single request, we would very likely assert making the
request because the address of the list pointer wasn't a valid
GrlTmdbRequestDetail value.

https://bugzilla.gnome.org/show_bug.cgi?id=726372